# crewai-developer-copilot

./: .env  .gitignore  DEVELOPER.md  INSTALL.md  README.md  main.py  metadata.db  package-lock.json  package.json  pyproject.toml
copilot_crew/: __init__.py  agents.py  flows.py  tasks.py  tools.py
database/: __init__.py  manager.py  schema.py
home/acer/Downloads/crewai-developer-copilot/projects/sales-backend/docs/: architecture.md  business-rules.md  database.md  dependencies.md  project-summary.md  routes.md  validations.md
scanner/: ast_parser.py  dependency_mapper.py  project_scanner.py
scratch/: test_ast.py  test_fields.py
tests/: test_scanner.py
tests/dummy-project/: package.json
tests/dummy-project/migrations/: 20260620_create_users.sql
tests/dummy-project/src/: index.js
tests/dummy-project/src/models/: User.js
tests/dummy-project/src/services/: UserService.js
